# Vextr

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  NOTICE  README.md  ROADMAP.md  SECURITY.md  fortnite.rb
.github/workflows/: ci.yml  cmake-tests.yml  deploy-docs.yml  release.yml
docs/content/Getting Started/: Introduction.md
docs/scripts/: postprocess.js
docs/site/: astro.config.mjs  package.json
examples/: focus.cpp  layout.cpp
examples/border_example/: main.cpp
examples/button_example/: main.cpp
examples/buttons/: main.cpp
examples/focus/: main.cpp
examples/focus_example/: main.cpp
examples/input/: main.cpp
examples/input_example/: main.cpp
examples/layout/: main.cpp
examples/layout_example/: main.cpp
examples/navigator/: main.cpp
examples/navigator_example/: main.cpp
examples/overlay_example/: main.cpp
examples/scrollview_example/: main.cpp
examples/text_widgets_example/: main.cpp
examples/weather_example/: main.cpp  weather_fetch.rb
include/Vextr/: App.hpp  Vextr.h
include/Vextr/backend/: Backend.hpp  Buffer.hpp  Renderer.hpp  Terminal.hpp
include/Vextr/core/: AbsoluteLayout.hpp  Align.hpp  Container.hpp  Context.hpp  Event.hpp  FocusManager.hpp  Geometry.hpp  Layout.hpp  OverlayManager.hpp  StackLayout.hpp  Style.hpp  Theme.hpp  Types.hpp  Widget.hpp
include/Vextr/layout/: AbsoluteLayout.hpp  GridLayout.hpp  StackLayout.hpp
include/Vextr/utils/: Ansi.hpp  Debug.hpp  Input.hpp  InputParser.hpp  InputReader.hpp  String.hpp  Unicode.hpp
include/Vextr/widgets/: Button.hpp  Container.hpp  Dialog.hpp  Dropdown.hpp  Input.hpp  Label.hpp  Modal.hpp  Navigator.hpp  Panel.hpp  ScrollView.hpp  TextArea.hpp  TextFlow.hpp  TextView.hpp
src/: App.cpp
src/backend/: Backend.cpp  Buffer.cpp  Renderer.cpp  Terminal.cpp
src/core/: AbsoluteLayout.cpp  Container.cpp  Context.cpp  Event.cpp  FocusManager.cpp  Geometry.cpp  GridLayout.cpp  Layout.cpp  OverlayManager.cpp  StackLayout.cpp  Style.cpp  Theme.cpp  Types.cpp  Widget.cpp
src/layout/: AbsoluteLayout.cpp  GridLayout.cpp  StackLayout.cpp
src/utils/: Debug.cpp  InputParser.cpp  InputReader.cpp  String.cpp  Unicode.cpp
src/widgets/: Button.cpp  Container.cpp  Dialog.cpp  Dropdown.cpp  Input.cpp  Label.cpp  Modal.cpp  Navigator.cpp  Panel.cpp  ScrollView.cpp  TextArea.cpp  TextFlow.cpp  TextView.cpp
tests/: test_app.cpp  test_geometry.cpp  test_input_parser.cpp  test_label_widget.cpp  test_scroll_view.cpp  test_text_area.cpp  test_text_view.cpp  test_unicode.cpp
